# cmakeTemplates

./: .gitignore  README.md
cmakeTemplate-1/: .gitignore  CMakeLists.txt
cmakeTemplate-1/include/: BaseClass.h
cmakeTemplate-1/src/: BaseClass.cpp  main.cpp
cmakeTemplate-2/: CMakeLists.txt
cmakeTemplate-2/cmake/inConfig/: buildVersion.h.in
cmakeTemplate-2/include/: BaseClass.h
cmakeTemplate-2/src/: main.cpp
cmakeTemplate-3/: .gitignore  CMakeLists.txt
cmakeTemplate-3/cmake/inConfig/: buildVersion.h.in
cmakeTemplate-3/src/myApp/: CMakeLists.txt
cmakeTemplate-3/src/myApp/include/: DerivedClass.h
cmakeTemplate-3/src/myApp/src/: BaseClass.cpp  DerivedClass.cpp  main.cpp
cmakeTemplate-3/src/myLib/: CMakeLists.txt
cmakeTemplate-3/src/myLib/include/: myAppLib.h
cmakeTemplate-3/src/myLib/src/: myAppLib.cpp
